[project]
name = "Threagetarian"
version = "0.1.0"
description = "A Threadiverse anti-spam and admin bot."
authors = [
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pythorhead",
    "loguru",
    "Flask",
    "flask-restx",
    "waitress",
    "SQLAlchemy",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/db0/threagetarian"
"Bug Tracker" = "https://github.com/db0/threagetarian/issues"

[tool.ruff]
line-length = 140
select = [
  #"A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  #"B",
  #"C4",
  "PIE",
  #"RET",
  #"SIM",
  "COM",
  # "D",
  #"ANN"
  ]
ignore = [
  "ANN101",
  "ANN102",
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",]


[tool.black]
line-length = 140
include = '\.pyi?$'

[tool.ruff.per-file-ignores]
"horde/sandbox.py" = ["F401"]
"server.py" = ["E402"]
